Edit navbar h2 to h6

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
         <nav class="navbar header">
             <h2 id="mask"><img src="images/maskrenlogo.png" alt="logo black" width="40" class="navbar-brand" ></h2>
-            <a href="#intro"><h2>Introduction</h2></a>
-            <a href="#about"><h2>About</h2></a>
-            <a href="#MyProjects" ><h2>My Projects</h2></a>
+            <a href="#intro"><h4>Introduction</h4></a>
+            <a href="#about"><h4>About</h4></a>
+            <a href="#MyProjects" ><h4>My Projects</h4></a>
         </nav>
     <br>
 
@@ -24,7 +24,7 @@
         <h1>I am Maskren</h1>
     </div>
 
-    <div class="container-fluid myintro-inverse" id="about"><h1>Who am I ?</h1><br><h2>I am Harshet,<br> <b> Web programmer</b></h2><p>I have many projects to show my skills to the world. <br> I use Bootstrap(also in this Page) A CSS Framework, HTML, CSS, SASS, the extension of CSS. <br> In future, I will create a Full Stack Website with Django,and use other technologies like <br> PostgreSQL,  Git the Version Control System. </p></div>
+    <div class="container-fluid myintro-inverse" id="about"><h1>Who am I ?</h1><br><h2>I am Harshet,<br> <b> Web programmer</b></h2><p>I have many projects to show my skills to the world. <br> I use Bootstrap(also in this Page) A CSS Framework, HTML, CSS, SASS, the extension of CSS. <br> In future... <br>I will create a Full Stack Website with Django,and use other technologies like <br> PostgreSQL,  Git the Version Control System. </p></div>
 
     <div class="container-fluid myprojects" id="MyProjects"><h1>My Projects</h1></div>
 </body>
